infra/main.tf
provider "aws" {
  region = "us-east-1"
}

resource "aws_sqs_queue" "email_queue" {
  name = "email-queue"
}

resource "aws_ssm_parameter" "auth_token" {
  name  = "/auth/token"
  type  = "SecureString"
  value = "$DJISA<$#45ex3RtYr"
}

resource "aws_s3_bucket" "microservice_data" {
  bucket = "microservice-data"
}


module "vpc" {
  source  = "terraform-aws-modules/vpc/aws"
  version = ">= 3.0"

  name = "simple-vpc"           # Friendly name for the VPC and related resources
  cidr = "10.0.0.0/16"          # IP range for the VPC

  azs             = ["us-east-1a", "us-east-1b"] # Availability zones for subnets
  public_subnets  = ["10.0.1.0/24", "10.0.2.0/24"] # Subnets open to the internet

  enable_nat_gateway = false   # No NAT gateway needed as we only have public subnets
  enable_dns_hostnames = true  # Needed for ECS to resolve hostnames
}



resource "aws_security_group" "elb_sg" {
  name        = "elb-sg"
  description = "Allow HTTP inbound to ELB"
  vpc_id      = module.vpc.vpc_id

  ingress {
    description      = "HTTP from anywhere"
    from_port        = 80
    to_port          = 80
    protocol         = "tcp"
    cidr_blocks      = ["0.0.0.0/0"] 
  }

  egress {
    description      = "Allow all outbound traffic"
    from_port        = 0
    to_port          = 0
    protocol         = "-1"
    cidr_blocks      = ["0.0.0.0/0"]
  }
}


resource "aws_security_group" "ecs_sg" {
  name        = "ecs-instance-sg"
  description = "Allow traffic from ELB"
  vpc_id      = module.vpc.vpc_id

  ingress {
    description = "Allow traffic from ELB"
    from_port   = 8000 
    to_port     = 8000 
    protocol    = "tcp"
    security_groups = [aws_security_group.elb_sg.id]
  }

  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }
}

resource "aws_elb" "main" {
  name               = "simple-elb"
  internal           = false                  # Internet-facing ELB
  security_groups    = [aws_security_group.elb_sg.id]
  subnets            = module.vpc.public_subnets

  listener {
    instance_port     = 8000                      # Port on ECS task/container
    instance_protocol = "http"
    lb_port           = 80                      # Port on the ELB
    lb_protocol       = "http"
  }

  health_check {
    target              = "HTTP:8000/"
    interval            = 30                     # Time between health checks
    timeout             = 5                      # Time to wait for a response
    healthy_threshold   = 2                      # Number of successes before healthy
    unhealthy_threshold = 2                      # Number of failures before unhealthy
  }

  cross_zone_load_balancing = true               # Distribute load evenly across AZs
  idle_timeout               = 60                 # Connection idle timeout in seconds

  tags = {
    Name = "simple-elb"
  }
}


module "ecs_cluster" {
  source = "terraform-aws-modules/ecs/aws"
  cluster_name = "my-app"
  default_capacity_provider_use_fargate = false

  autoscaling_capacity_providers = {
    ex_1 = {
      auto_scaling_group_arn         = module.autoscaling["ex_1"].autoscaling_group_arn
      managed_scaling = {
        maximum_scaling_step_size = 5
        minimum_scaling_step_size = 1
        status                    = "ENABLED"
        target_capacity           = 60
      }
    }
  }

  services = {
    api = {
      name = "api"
      desired_count   = 1
      launch_type     = "EC2" #can be removed
      network_mode    = "bridge"
      requires_compatibilities = ["EC2"] 
       
      capacity_provider_strategy = [
      {
        capacity_provider = "ex_1"
        weight            = 1
      }
      ]
      container_definitions = {
        api = {
          network_mode = "bridge"
          image     = "er92442/api:latest"                       
          essential = true                               
          port_mappings = [
            {
              name          = "api"
              containerPort = 8000
              hostPort      = 8000
              
              protocol      = "tcp"
            }
          ]
          enable_cloudwatch_logging              = true
        }
      }
      load_balancer = {
        service = {
          container_name   = "api"
          container_port   = 8000
          elb_name         = aws_elb.main.name
        }
      }
      subnet_ids = module.vpc.public_subnets
    }
  }
}

module "autoscaling" {
  source  = "terraform-aws-modules/autoscaling/aws"
  version = "~> 7.0"
  for_each = {
    ex_1 = {
      instance_type              = "t3.micro"
      use_mixed_instances_policy = false
      mixed_instances_policy     = {}
    }
  }
  name = "autoscaling-group-${each.key}"
  image_id = data.aws_ssm_parameter.ecs_ami.value

  instance_type = each.value.instance_type
  vpc_zone_identifier = module.vpc.public_subnets
  health_check_type   = "EC2"
  min_size            = 1
  max_size            = 1
  desired_capacity    = 1
  security_groups = [aws_security_group.ecs_sg.id]
  user_data = base64encode("echo ECS_CLUSTER=my-app >> /etc/ecs/ecs.config")
  create_iam_instance_profile = true
  iam_role_name               = "ecs-instance-role-${each.key}"
  iam_role_policies = {
    AmazonEC2ContainerServiceforEC2Role = "arn:aws:iam::aws:policy/service-role/AmazonEC2ContainerServiceforEC2Role"
    AmazonSSMManagedInstanceCore        = "arn:aws:iam::aws:policy/AmazonSSMManagedInstanceCore"
    AmazonS3FullAccess                  = "arn:aws:iam::aws:policy/AmazonS3FullAccess"
    AmazonSQSFullAccess                 = "arn:aws:iam::aws:policy/AmazonSQSFullAccess"
    SecretsManagerReadWrite             = "arn:aws:iam::aws:policy/SecretsManagerReadWrite"
  }
}


data "aws_ssm_parameter" "ecs_ami" {
  name = "/aws/service/ecs/optimized-ami/amazon-linux-2/recommended/image_id"
}
